--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Empath Grief Care Support Groups</title>
+    
+    <!-- Google Fonts - Poppins -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
     <style>
         * {
             margin: 0;
@@ -23,7 +29,7 @@
         }
 
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+            font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
             line-height: 1.6;
             color: var(--text-dark);
             background-color: var(--white);
@@ -361,12 +367,16 @@
     <!-- Header -->
     <header class="header">
         <div class="header-content">
-            <div class="logo">Empath Health</div>
-            <div class="tagline">Here for the Full Life</div>
+            <div style="display: flex; align-items: center; gap: 1rem;">
+                <img src="https://octanecdn.com/empathenginesites/empathenginesites_557213614.svg" alt="Empath Health" style="height: 50px;">
+                <div>
+                    <div class="logo">Empath Health</div>
+                    <div class="tagline">Here for the Full Life</div>
+                </div>
+            </div>
         </div>
     </header>
 
-    <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
             <h1>Grief Care Support Groups</h1>
