Remove header text and match colors from CSSs

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         }
 
         :root {
-            --empath-purple: #6B2D8F;
+            --empath-purple: ##381D4F;
             --empath-teal: #00A3AD;
-            --empath-light-purple: #8B4DAE;
-            --empath-dark: #2C1A3D;
-            --text-dark: #333;
-            --text-light: #666;
+            --empath-light-purple: #8E52AC;
+            --empath-dark: #4A2358;
+            --text-dark: #333333;
+            --text-light: #666666;
             --bg-light: #F9F9F9;
             --white: #FFFFFF;
         }
@@ -364,16 +364,10 @@
     </style>
 </head>
 <body>
-    <!-- Header -->
+   <!-- Header -->
     <header class="header">
         <div class="header-content">
-            <div style="display: flex; align-items: center; gap: 1rem;">
-                <img src="https://octanecdn.com/empathenginesites/empathenginesites_557213614.svg" alt="Empath Health" style="height: 50px;">
-                <div>
-                    <div class="logo">Empath Health</div>
-                    <div class="tagline">Here for the Full Life</div>
-                </div>
-            </div>
+            <img src="https://octanecdn.com/empathenginesites/empathenginesites_557213614.svg" alt="Empath Health" style="height: 60px;">
         </div>
     </header>
 
