--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         :root {
             --empath-purple: ##381D4F;
             --empath-teal: #00A3AD;
-            --empath-light-purple: #8E52AC;
-            --empath-dark: #4A2358;
-            --text-dark: #333333;
-            --text-light: #666666;
+            --empath-light-purple: #8B4DAE;
+            --empath-dark: #2C1A3D;
+            --text-dark: #333;
+            --text-light: #666;
             --bg-light: #F9F9F9;
             --white: #FFFFFF;
         }
