Fix CSS (again)

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         }
 
         :root {
-            --empath-purple: ##381D4F;
+            --empath-purple: #381D4F;
             --empath-teal: #00A3AD;
             --empath-light-purple: #8B4DAE;
             --empath-dark: #2C1A3D;
